# SegScript

./: README.md  main.py  model.py  pyproject.toml  utils.py
segscript/: main.py  model.py
